--- a/fylo-landing-page-with-two-column-layout-master/styles.css
+++ b/fylo-landing-page-with-two-column-layout-master/styles.css
@@ -73,7 +73,7 @@ html {
 }
 
 body {
-	max-width: 92rem;
+	max-width: 90rem;
 }
 
 /* Nav */
@@ -578,6 +578,8 @@ footer {
 	}
 
 	.early-access {
+		padding-left: 5rem;
+		padding-right: 5rem;
 		justify-content: space-between;
 		flex-direction: row;
 		gap: 14rem;
@@ -613,6 +615,10 @@ footer {
 		font-size: 0.875rem;
 		width: 12.5rem;
 		height: 3rem;
+	}
+
+	footer {
+		padding: 4rem 5rem 3rem;
 	}
 
 	.grid-container {
