--- a/single-page-design-portfolio/styles.css
+++ b/single-page-design-portfolio/styles.css
@@ -239,10 +239,10 @@ body {
 }
 
 .carousel__images {
-	padding: 0 1rem;
+	width: 15rem;
 	flex-direction: row;
 	gap: 0.8333rem;
-	transform: translateX(-30rem);
+	transform: translateX(-31rem);
 	transition: transform 0.5s ease-in-out;
 }
 
@@ -283,4 +283,293 @@ body {
 
 .booking p {
 	font-size: var(--para-small);
+}
+
+/* Common */
+
+@media (min-width: 26.875rem) {
+	.header,
+	.footer {
+		padding: 1.8889rem 1rem;
+	}
+	header,
+	footer {
+		width: 100%;
+		margin: auto;
+		max-width: 63.6664rem;
+	}
+
+	.logo {
+		width: 3.5556rem;
+		height: 3.5556rem;
+	}
+
+	.button__cta {
+		width: 12.6667rem;
+		height: 3.111rem;
+		font-size: 0.8889rem;
+	}
+
+	.user {
+		flex-direction: row;
+	}
+
+	.user__introduction p {
+		line-height: 1.5rem;
+		font-size: 1rem;
+	}
+
+	.carousel {
+		gap: 3.111rem;
+	}
+
+	.carousel h2 {
+		font-size: 1.7778rem;
+	}
+
+	.carousel-image {
+		border-radius: 0.75rem;
+		width: 30rem;
+		height: 20rem;
+	}
+}
+
+/* Tablet sizes */
+
+@media (min-width: 26.875rem) and (max-width: 48rem) {
+	header,
+	footer {
+		width: 100%;
+		margin: auto;
+		max-width: 38.333rem;
+	}
+
+	.header {
+		margin-bottom: 3.5556rem;
+	}
+
+	.header__description {
+		gap: 1.5rem;
+	}
+
+	.header__description h1 {
+		font-size: 2.4445rem;
+	}
+
+	.header__description p {
+		width: 31.8333rem;
+		font-size: 1rem;
+	}
+
+	.grid-container {
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+	}
+
+	.design-patches {
+		max-width: 38.3336rem;
+	}
+
+	.graphics-box {
+		height: 100%;
+		grid-column: 1/3;
+		grid-row: 1/3;
+	}
+
+	.ui-box {
+		grid-column: 3/4;
+		grid-row: 1/2;
+	}
+
+	.apps-box {
+		grid-column: 4/5;
+		grid-row: 1/2;
+	}
+
+	.illustrations-box {
+		grid-column: 3/5;
+		grid-row: 2/3;
+	}
+
+	.photography-box {
+		grid-row: 3/4;
+		grid-column: 1/3;
+	}
+
+	.motion-box {
+		grid-row: 3/4;
+		grid-column: 3/5;
+	}
+
+	/* User */
+	.user {
+		margin-left: -3rem;
+		gap: 3.8333rem;
+	}
+
+	.user__image {
+		width: 20.2222rem;
+		height: 20.2222rem;
+	}
+
+	.user__introduction {
+		align-items: flex-start;
+		text-align: start;
+		width: 18.8333rem;
+		height: 20.2222rem;
+		justify-content: space-between;
+	}
+
+	.mini-header {
+		font-size: 1.7778rem;
+	}
+
+	.carousel {
+		margin-bottom: 6.6667rem;
+	}
+
+	.carousel__images {
+		width: 30rem;
+		gap: 1.667rem;
+		margin: 0 3rem;
+		padding: 0;
+		transform: translateX(-62rem);
+	}
+
+	.upper-footer {
+		padding: 3.55556rem 4.222rem;
+		gap: 1.75rem;
+		width: 100%;
+		max-width: 38.333rem;
+	}
+
+	.booking p {
+		font-size: 1rem;
+		width: 30rem;
+	}
+}
+
+/* Desktop sizes */
+@media (min-width: 48.125rem) {
+	.header {
+		margin-bottom: 2.5556rem;
+	}
+
+	.header__description h1 {
+		font-size: 3.111rem;
+	}
+
+	.header p {
+		font-size: 1rem;
+		width: 100%;
+		max-width: 40.556rem;
+	}
+
+	.design-patches {
+		max-width: 61.6664rem;
+	}
+
+	.design-patches {
+		gap: 1.333rem;
+
+		grid-template-columns: repeat(6, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+	}
+
+	.graphics-box {
+		height: 100%;
+		grid-row: 1/3;
+		grid-column: 1/3;
+	}
+
+	.ui-box,
+	.apps-box {
+		width: 100%;
+	}
+
+	.ui-box {
+		grid-column: 3/4;
+		grid-row: 1/2;
+	}
+
+	.apps-box {
+		grid-row: 1/2;
+		grid-column: 4/5;
+	}
+
+	.illustrations-box {
+		grid-column: 3/5;
+		grid-row: 2/3;
+	}
+
+	.photography-box {
+		grid-column: 5/7;
+		grid-row: 1/2;
+	}
+
+	.motion-box {
+		grid-row: 2/3;
+		grid-column: 5/7;
+	}
+
+	.user {
+		max-width: 63.4444rem;
+		margin: auto;
+		gap: 6.9444rem;
+		margin-bottom: 4.8889rem;
+	}
+
+	.user__image {
+		width: 24.7222rem;
+		height: 24.7222rem;
+	}
+
+	.user__introduction {
+		gap: 1.7778rem;
+		align-items: flex-start;
+		width: 100%;
+		max-width: 30rem;
+		text-align: start;
+	}
+
+	.user__introduction .mini-header {
+		font-size: 2.2223rem;
+	}
+
+	.carousel {
+		margin-bottom: 4.8889rem;
+	}
+
+	.carousel__images {
+		width: 30rem;
+		gap: 1.6667rem;
+		padding: 0;
+		transform: translateX(-62rem);
+	}
+
+	.footer {
+		gap: 3.111rem;
+	}
+
+	.upper-footer {
+		padding: 4.445rem 2.6667rem;
+		width: 100%;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.booking {
+		gap: 1.333rem;
+		width: 30rem;
+		text-align: start;
+		align-items: flex-start;
+	}
+
+	.booking .mini-header {
+		font-size: 2.22223rem;
+	}
+
+	.booking p {
+		font-size: 1rem;
+	}
 }
