--- a/news-homepage-main/styles.css
+++ b/news-homepage-main/styles.css
@@ -298,6 +298,10 @@ h1 {
 }
 
 @media (min-width: 48.125rem) {
+	body {
+		padding-top: 6rem;
+	}
+
 	.main-desktop {
 		display: block;
 	}
@@ -313,6 +317,10 @@ h1 {
 		margin-right: auto;
 		width: 100%;
 		max-width: 73.333rem;
+	}
+
+	.header {
+		margin-bottom: 3.6667rem;
 	}
 
 	.hamburger-menu {
