--- a/sunnyside-agency-landing-page-main/styles.css
+++ b/sunnyside-agency-landing-page-main/styles.css
@@ -557,7 +557,7 @@ h6,
 
 	.testimonials {
 		gap: 4.5556rem;
-		padding: 3.5556rem 0;
+		padding: 0;
 		width: 100%;
 		max-width: 61.1112rem;
 		margin: 9rem auto;
