--- a/typemaster-pre-launch-landing-page/styles.css
+++ b/typemaster-pre-launch-landing-page/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500;700;900&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Barlow:wght@500;700;900&display=swap';
 
 :root {
 	--orange-dark: #f16718;
@@ -42,6 +42,7 @@ select {
 html {
 	font-family: 'Barlow', sans-serif;
 	font-size: 16px;
+	overflow-x: hidden;
 }
 
 body {
@@ -102,6 +103,16 @@ body {
 	border-radius: 1rem;
 }
 
+.square-box {
+	position: absolute;
+	display: none;
+}
+
+.intro {
+	gap: 4rem;
+	position: relative;
+}
+
 .intro,
 .keyboards {
 	margin-bottom: 1.5rem;
@@ -145,11 +156,11 @@ body {
 /* Keyboards section */
 
 .keyboards {
+	position: relative;
 	gap: 4.6875rem;
 }
 
 .keyboard-images {
-	width: 23.4375rem;
 	transform: translateX(-1.5rem);
 	gap: 1.5rem;
 	flex-direction: row;
@@ -164,7 +175,7 @@ body {
 	position: relative;
 	width: 8.125rem;
 	background: url(./assets/mobile/image-phone-and-keyboard.jpg), #f16718;
-	background-blend-mode: soft-light;
+	background-blend-mode: multiply;
 	background-size: contain;
 }
 
@@ -195,7 +206,7 @@ body {
 }
 
 .feature {
-	gap: 3rem;
+	gap: 2rem;
 }
 
 .feature .sm-header {
@@ -216,8 +227,8 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 65px;
-	height: 65px;
+	width: 4rem;
+	height: 4rem;
 	background-color: #f16718;
 }
 
@@ -246,4 +257,206 @@ body {
 .attribution a:is(:hover, :active) {
 	color: var(--orange-dark);
 	transition: color 0.25s ease;
+}
+
+@media (min-width: 26.875rem) {
+	.button {
+		width: 10.9375rem;
+		height: 3.625rem;
+	}
+}
+
+/* Tablet Sizes */
+
+@media (min-width: 26.875rem) and (max-width: 48.0625rem) {
+	body {
+		padding: 2.5rem;
+	}
+
+	.intro {
+		margin-bottom: 4.5rem;
+		flex-direction: row;
+	}
+
+	.intro__description {
+		width: 21.25rem;
+	}
+
+	.intro__background-img {
+		transform: translateX(3rem);
+		background: url(./assets/tablet/image-keyboard.jpg);
+		background-size: cover;
+		width: 29.875rem;
+		height: 26.5625rem;
+	}
+
+	.keyboards {
+		margin-bottom: 8.875rem;
+	}
+
+	.keyboard-images {
+		justify-content: flex-start;
+		transform: translateX(0);
+		gap: 1.875rem;
+	}
+
+	.keyboard-images .img-box {
+		height: 20rem;
+	}
+
+	.keyboard-orange {
+		width: 13.375rem;
+		background: url(./assets/tablet/image-phone-and-keyboard.jpg), #f16718;
+		background-blend-mode: multiply;
+		background-size: contain;
+	}
+
+	.keyboard-box {
+		width: 27.8125rem;
+		background: url(./assets/tablet/image-glass-and-keyboard.jpg);
+		background-size: contain;
+	}
+
+	.keyboard__description {
+		display: grid;
+		text-align: start;
+		grid-template-columns: 15.9375rem 25rem;
+	}
+
+	.features {
+		margin-bottom: 9rem;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.feature {
+		width: 21.1875rem;
+		height: 18.0625rem;
+		padding-right: 3.625rem;
+		align-items: flex-start;
+	}
+
+	.feature__description {
+		align-items: flex-start;
+		text-align: start;
+	}
+}
+
+/* desktop */
+
+@media (min-width: 48.125rem) {
+	body {
+		overflow-x: hidden;
+		padding: 3.4375rem;
+	}
+
+	.square-box {
+		width: 15.9375rem;
+		height: 15rem;
+	}
+
+	.header,
+	.main {
+		max-width: 68.75rem;
+		margin: auto;
+	}
+
+	.header {
+		margin-bottom: 5rem;
+	}
+
+	.intro {
+		margin-bottom: 1.875rem;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.intro__description {
+		gap: 1.5rem;
+		max-width: 27.8125rem;
+		font-size: 1.125rem;
+		width: 100%;
+	}
+
+	.intro__cta {
+		gap: 2.5rem;
+		margin-top: 1rem;
+	}
+
+	.intro__description .lg-header {
+		font-size: 3.5rem;
+	}
+
+	.intro__background-img {
+		transform: translateX(0);
+		width: 33.75rem;
+		height: 30rem;
+		background: url(./assets/desktop/image-keyboard.jpg);
+		background-size: contain;
+	}
+
+	.intro .square-box {
+		display: block;
+		top: 0;
+		right: -18rem;
+	}
+
+	.keyboards {
+		flex-direction: row;
+		justify-content: space-between;
+		margin-bottom: 10.5rem;
+	}
+
+	.keyboards .square-box {
+		display: block;
+		bottom: 0;
+		left: -19rem;
+	}
+
+	.keyboard-images {
+		gap: 1.875rem;
+	}
+
+	.keyboard-images .img-box {
+		height: 30rem;
+	}
+
+	.keyboard-orange {
+		width: 15.9375rem;
+		background: url(./assets/desktop/image-phone-and-keyboard.jpg), #f16718;
+		background-blend-mode: multiply;
+		background-size: contain;
+	}
+
+	.keyboard-box {
+		width: 27.8125rem;
+		background: url(./assets/desktop/image-glass-and-keyboard.jpg);
+		background-size: contain;
+	}
+
+	.keyboard__description {
+		width: 15.95rem;
+		text-align: start;
+		font-size: 1rem;
+		gap: 1.8rem;
+	}
+
+	.keyboard__description .md-header {
+		font-size: 2.25rem;
+	}
+
+	.features {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	.feature {
+		align-items: flex-start;
+		width: 15.9375rem;
+	}
+
+	.feature__description {
+		text-align: start;
+		align-items: flex-start;
+	}
 }
