--- a/maker-pre-launch-landing-page/styles.css
+++ b/maker-pre-launch-landing-page/styles.css
@@ -63,6 +63,10 @@ body {
 	margin-bottom: 9.6667rem;
 }
 
+.big-image {
+	display: none;
+}
+
 .logo {
 	margin-bottom: 1.2rem;
 }
@@ -110,6 +114,7 @@ body {
 
 .feature-header {
 	color: #fff;
+	font-size: 1.2rem;
 }
 
 .feature-description .normal-text {
@@ -150,6 +155,7 @@ body {
 
 .pricing-box {
 	gap: 4.333rem;
+	margin-bottom: 9.6667rem;
 }
 
 .price-illustration {
@@ -249,12 +255,15 @@ body {
 
 /* Bottom form */
 
-.form-container {
+.footer {
 	background: url(./assets/bg-footer-squiggle.svg);
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: top left;
-	margin: 9.6667rem 0;
+}
+
+.form-container {
+	margin-bottom: 4rem;
 }
 
 .form-header {
@@ -345,5 +354,282 @@ body {
 	transition: color 0.25s ease;
 }
 
-@media (min-width: 26.75rem) and (max-width: 48.125rem) {
+@media (min-width: 26.75rem) {
+	.logo {
+		align-self: flex-start;
+	}
+
+	.mobile-header {
+		display: none;
+	}
+
+	.big-image {
+		display: block;
+	}
+
+	.middle-section {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+
+	.feature-description .normal-text {
+		text-align: start;
+	}
+
+	.form-container {
+		width: 31.7333rem;
+		gap: 1.86667rem;
+	}
+
+	.form-header {
+		padding: 0;
+	}
+
+	.form {
+		gap: 1rem;
+		padding: 0;
+		flex-direction: row;
+	}
+
+	.form .label {
+		width: 21.333rem;
+	}
+
+	.form .button {
+		width: 9.3334rem;
+	}
+}
+
+@media (min-width: 26.75rem) and (max-width: 48.0625rem) {
+	.header {
+		padding-top: 3.2rem;
+	}
+
+	.logo {
+		padding: 0 2.667rem;
+		align-self: flex-start;
+	}
+
+	.header__description {
+		position: relative;
+		background: url(./assets/bg-hero-squiggle.svg);
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center center;
+		width: 30.46667rem;
+	}
+
+	.hero-header {
+		padding: 0;
+	}
+
+	.image-left {
+		margin-left: -15rem;
+	}
+
+	.image-right {
+		margin-right: -15rem;
+	}
+
+	.main {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.features-container {
+		width: 38.2rem;
+	}
+
+	.feature-box {
+		width: 34.333rem;
+		gap: 3.6667rem;
+		flex-direction: row;
+	}
+
+	.feature-box .img-container {
+		width: 8rem;
+		height: 8.2667rem;
+	}
+
+	.feature-description {
+		width: 22.6667rem;
+		align-items: flex-start;
+	}
+
+	.right-align {
+		transform: translateX(4rem);
+	}
+
+	.tier-name {
+		margin-top: 0.6rem;
+	}
+
+	.pricing-heading {
+		font-size: 1.6rem;
+	}
+
+	.pricing-heading .normal-text {
+		width: 38.2rem;
+	}
+
+	.tier-features {
+		gap: 1rem;
+	}
+
+	.pricing-description {
+		gap: 1.333rem;
+		width: 29.6667rem;
+		height: 29.8667rem;
+	}
+
+	.footer {
+		width: 100%;
+	}
+
+	.attribution {
+		font-size: 1.2rem;
+	}
+}
+
+@media (min-width: 48.125rem) {
+	body {
+		max-width: 73.333rem;
+		margin: auto;
+	}
+
+	.header {
+		padding-top: 5.4rem;
+		gap: 6.46667rem;
+		margin-bottom: 13.5333rem;
+	}
+
+	.middle-section {
+		background: url(./assets/bg-hero-squiggle.svg);
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: top center;
+		width: 103.333rem;
+		align-items: center;
+	}
+
+	.logo {
+		padding: 0;
+	}
+
+	.header__description {
+		width: 100%;
+		max-width: 48.6667rem;
+		padding: 0 6.5rem;
+	}
+
+	.hero-header {
+		padding: 0;
+		font-size: 3.2rem;
+		line-height: 3.7333rem;
+	}
+
+	.image-left {
+		width: 27.2rem;
+		height: 30.6rem;
+	}
+
+	.mouse {
+		margin-top: 2.4rem;
+	}
+
+	.main {
+		padding: 0;
+	}
+
+	.features-container {
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(1, 1fr);
+		gap: 1.4rem;
+		width: 100%;
+		max-width: 73.333rem;
+		height: 25.5333rem;
+		margin-bottom: 13.46667rem;
+	}
+
+	.feature-box {
+		align-items: flex-start;
+		width: 17rem;
+		height: 22.333rem;
+	}
+
+	.feature-description {
+		align-items: flex-start;
+	}
+
+	.img-container {
+		width: 10.6667rem;
+		height: 11rem;
+	}
+	.passions {
+		width: 5.8667rem;
+		height: 7.0667rem;
+	}
+
+	.freedom {
+		width: 4.9333rem;
+		height: 5.9333rem;
+	}
+
+	.lifestyle {
+		width: 5.333rem;
+		height: 6.26667rem;
+	}
+
+	.anywhere {
+		width: 6.9333rem;
+		height: 4.9333rem;
+	}
+	.bottom-align {
+		transform: translateY(5rem);
+	}
+
+	.pricing-box {
+		padding: 0 6rem;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: 7.8667rem 32.1333rem;
+		row-gap: 4.8rem;
+		column-gap: 2rem;
+	}
+
+	.pricing-heading {
+		grid-column: 1/3;
+		grid-row: 1/2;
+	}
+
+	.pricing-header {
+		font-size: 2.133rem;
+	}
+
+	.pricing-heading .normal-text {
+		max-width: 36rem;
+	}
+	.free-tier {
+		margin-top: 0;
+		justify-self: center;
+		width: 29.6667rem;
+		height: 28.333rem;
+	}
+
+	.priced-tier {
+		padding-right: 2.533rem;
+		justify-self: center;
+		width: 29.6667rem;
+		height: 29.9333rem;
+	}
+
+	.form-container {
+		gap: 2.8rem;
+	}
+
+	.form-header {
+		font-size: 2.1333rem;
+	}
 }
